--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.core.version>2.2.0-rcc1</jackson.core.version>
+    <jackson.core.version>2.2.0-rc1</jackson.core.version>
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
     <packageVersion.package>${project.groupId}.protobuf</packageVersion.package>
     <!--
@@ -61,11 +61,18 @@ abstractions.
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.core.version}</version>
     </dependency>
+<!--
     <dependency>
       <groupId>com.dyuproject.protostuff</groupId>
       <artifactId>protostuff-parser</artifactId>
       <version>1.0.7</version>
     </dependency>
+-->
+	<dependency>
+	  <groupId>com.squareup</groupId>
+	  <artifactId>protoparser</artifactId>
+	  <version>1.0.0</version>
+	</dependency>
 
      <!-- and for testing, JUnit is needed; as well as annotations -->
     <dependency>
