--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.core.version>2.2.0-rc1</jackson.core.version>
+    <jackson.core.version>2.2.1-SNAPSHOT</jackson.core.version>
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
     <packageVersion.package>${project.groupId}.protobuf</packageVersion.package>
     <!--
