--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.dataformat</groupId>
   <artifactId>jackson-dataformat-protobuf</artifactId>
   <name>Jackson-dataformat-protobuf</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.3.0-SNAPSHOT</version>
   <description>Support for reading and writing protobuf-encoded data via Jackson
 abstractions.
   </description>
@@ -22,7 +22,7 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.core.version>2.2.2</jackson.core.version>
+    <jackson.core.version>2.3.0-SNAPSHOT</jackson.core.version>
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
     <packageVersion.package>${project.groupId}.protobuf</packageVersion.package>
     <!--
