--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <artifactId>jackson-dataformat-protobuf</artifactId>
   <name>Jackson-dataformat-protobuf</name>
   <version>2.3.0-SNAPSHOT</version>
+  <packaging>bundle</packaging>
   <description>Support for reading and writing protobuf-encoded data via Jackson
 abstractions.
   </description>
