--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.version.annotations>2.6.0-rc1</jackson.version.annotations>
-    <jackson.version.core>2.6.0-rc2-SNAPSHOT</jackson.version.core>
+    <jackson.version.annotations>2.6.0-rc2</jackson.version.annotations>
+    <jackson.version.core>2.6.0-rc2</jackson.version.core>
 
     <!-- Protoparser 4.x requires 1.7, so: -->
     <javac.src.version>1.7</javac.src.version>
