--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.dataformat</groupId>
   <artifactId>jackson-dataformat-protobuf</artifactId>
   <name>Jackson-dataformat-protobuf</name>
-  <version>2.6.0-rc5-SNAPSHOT</version>
+  <version>2.6.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Support for reading and writing protobuf-encoded data via Jackson
 abstractions.
@@ -23,8 +23,8 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.version.annotations>2.6.0-rc4</jackson.version.annotations>
-    <jackson.version.core>2.6.0-rc4</jackson.version.core>
+    <jackson.version.annotations>2.6.0</jackson.version.annotations>
+    <jackson.version.core>2.6.0</jackson.version.core>
 
     <!-- Protoparser 4.x requires 1.7, so: -->
     <javac.src.version>1.7</javac.src.version>
