--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.dataformat</groupId>
   <artifactId>jackson-dataformat-protobuf</artifactId>
   <name>Jackson-dataformat-protobuf</name>
-  <version>2.7.0-SNAPSHOT</version>
+  <version>2.7.0-rc1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Support for reading and writing protobuf-encoded data via Jackson
 abstractions.
@@ -23,16 +23,13 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.version.annotations>2.6.0</jackson.version.annotations>
-    <jackson.version.core>2.7.0-SNAPSHOT</jackson.version.core>
+    <jackson.version.annotations>2.7.0-rc1</jackson.version.annotations>
+    <jackson.version.core>2.7.0-rc1</jackson.version.core>
 
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
     <packageVersion.package>${project.groupId}.protobuf</packageVersion.package>
-    <!--
-     | Configuration properties for the OSGi maven-bundle-plugin
-    -->
-    <osgi.export>${project.groupId}.protobuf.*; version=${project.version}
-</osgi.export>
+    <!-- Default OSGi import is fine, export _should_ be, but due to shading play it safe -->
+    <osgi.export>${project.groupId}.protobuf.*; version=${project.version}</osgi.export>
     <osgi.private>com.squareup.protoparser.*</osgi.private>
 
   </properties>
