--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@ abstractions.
 
   <properties>
     <jackson.version.annotations>2.7.0-rc2</jackson.version.annotations>
-    <jackson.version.core>2.7.0-rc2</jackson.version.core>
+    <jackson.version.core>2.7.0-rc3-SNAPSHOT</jackson.version.core>
 
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
     <packageVersion.package>${project.groupId}.protobuf</packageVersion.package>
@@ -52,11 +52,11 @@ abstractions.
       <version>${jackson.version.core}</version>
       <scope>provided</scope>
     </dependency>
-	<dependency>
-	  <groupId>com.squareup</groupId>
-	  <artifactId>protoparser</artifactId>
-	  <version>4.0.0</version>
-	</dependency>
+    <dependency>
+      <groupId>com.squareup</groupId>
+      <artifactId>protoparser</artifactId>
+      <version>4.0.0</version>
+    </dependency>
 
      <!-- and for testing, JUnit is needed; as well as annotations -->
     <dependency>
