--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@ abstractions.
   </scm>
 
   <properties>
-    <jackson.version.annotations>2.7.0-rc2</jackson.version.annotations>
-    <jackson.version.core>2.7.0-rc3-SNAPSHOT</jackson.version.core>
+    <jackson.version.annotations>2.7.0-rc3</jackson.version.annotations>
+    <jackson.version.core>2.7.0-rc3</jackson.version.core>
 
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
     <packageVersion.package>${project.groupId}.protobuf</packageVersion.package>
