--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@ abstractions.
     <tag>HEAD</tag>
   </scm>
 
+  <properties>
     <jackson.version.core>2.7.3</jackson.version.core>
 
     <packageVersion.dir>com/fasterxml/jackson/dataformat/protobuf</packageVersion.dir>
@@ -29,6 +30,7 @@ abstractions.
     <!-- Default OSGi import is fine, export _should_ be, but due to shading play it safe -->
     <osgi.export>${project.groupId}.protobuf.*; version=${project.version}</osgi.export>
     <osgi.private>com.squareup.protoparser.*</osgi.private>
+  </properties>
 
   <dependencies>
     <!-- Extends Jackson core; uses protostuff libs for parsing, generation -->
