--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.dataformat</groupId>
   <artifactId>jackson-dataformat-protobuf</artifactId>
   <name>Jackson-dataformat-protobuf</name>
-  <version>2.6.7</version>
+  <version>2.6.8-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Support for reading and writing protobuf-encoded data via Jackson
 abstractions.
@@ -19,7 +19,7 @@ abstractions.
     <connection>scm:git:git@github.com:FasterXML/jackson-dataformat-protobuf.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-dataformat-protobuf.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-dataformat-protobuf</url>    
-    <tag>jackson-dataformat-protobuf-2.6.7</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
